--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sikeres</title>
+    <link rel="shortcut icon" type="image/jpg" href="./images/qr.png"/>
     <link href="./css/main.css" rel="stylesheet" type="text/css">
 </head>
     <body>
